changes to test coming poker game page

--- a/Page2/css/page2.css
+++ b/Page2/css/page2.css
@@ -7,3 +7,8 @@ h1 {font-family: sans-serif;
 h2 {font-family: sans-serif;
 font-size: 4em;
 color: #AABBDD;}
+
+table {height: 100px;
+	width: 800px;
+	background-color: gray;
+}
