--- a/Page2/drawpoker/draw_poker2.css
+++ b/Page2/drawpoker/draw_poker2.css
@@ -51,6 +51,10 @@ h3.creditstyle {background-color: green;
     font-size: 5em;
 }
 
+h3.returnstyle {background-color: #207799;
+
+}
+
 .backgroundcolor1 {background-color: blue;}
 
 .backgroundcolor2 {background-color: green;}
